# garuda-system-maintenance

./: .gitlab-ci.yml  CMakeLists.txt  PKGBUILD  README.md  garuda-system-maintenance-settings.desktop  garuda-system-maintenance.desktop  garuda-system-maintenance.notifyrc  garuda-system-maintenance.rules  garuda-system-maintenance@.service  garuda-system-maintenance_en_US.ts  main.cpp  migrate-dr460nized  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  transifex.yml  tray.cpp  tray.h  update-packages
i18n/: garuda-system-maintenance_am.ts  garuda-system-maintenance_ar.ts  garuda-system-maintenance_bg.ts  garuda-system-maintenance_ca.ts  garuda-system-maintenance_cs.ts  garuda-system-maintenance_da.ts  garuda-system-maintenance_de.ts  garuda-system-maintenance_el.ts  garuda-system-maintenance_en.ts  garuda-system-maintenance_es.ts  garuda-system-maintenance_et.ts  garuda-system-maintenance_eu.ts  garuda-system-maintenance_fa.ts  garuda-system-maintenance_fi.ts  garuda-system-maintenance_fil_PH.ts  garuda-system-maintenance_fr.ts  garuda-system-maintenance_he_IL.ts  garuda-system-maintenance_hi.ts  garuda-system-maintenance_hr.ts  garuda-system-maintenance_hu.ts  garuda-system-maintenance_id.ts  garuda-system-maintenance_is.ts  garuda-system-maintenance_it.ts  garuda-system-maintenance_ja.ts  garuda-system-maintenance_ka.ts  garuda-system-maintenance_kk.ts  garuda-system-maintenance_ko.ts  garuda-system-maintenance_lt.ts  garuda-system-maintenance_mk.ts  garuda-system-maintenance_mr.ts  garuda-system-maintenance_nb.ts  garuda-system-maintenance_nl.ts  garuda-system-maintenance_pl.ts  garuda-system-maintenance_pt.ts  garuda-system-maintenance_pt_BR.ts  garuda-system-maintenance_ro.ts  garuda-system-maintenance_ru.ts  garuda-system-maintenance_sk.ts  garuda-system-maintenance_sl.ts  garuda-system-maintenance_sq.ts  (+7 more)
src/: agentmanager.cpp  agentmanager.h  baseagent.h  forumagent.cpp  forumagent.h  main.cpp  migrationagent.cpp  migrationagent.h  packageagent.cpp  packageagent.h  settingsdialog.cpp  settingsdialog.h  snapshotagent.cpp  snapshotagent.h  tray.cpp  tray.h  tray.ui  updateagent.cpp  updateagent.h
